# keke

./: mypy.ini  pyproject.toml  pytest.ini
keke/: __init__.py  __main__.py  ai.py  browser.py  chat_client.py  command_line.py  data_types.py  log.py  tokens.py  whatsapp.py
prompts/: initial DAN 11.txt
prompts/Keke/: initial.txt
tests/: conftest.py  test_ai.py  test_command_line.py  test_data_types.py  test_whatsapp.py
