[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "keke"
authors = [{name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "beautifulsoup4",
    "emoji",
    "openai",
    "selenium",
    "tiktoken",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-kwparametrize",
    "types-beautifulsoup4",
]

[project.scripts]
keke = "keke.__main__:main"

[project.urls]
Home = "https://github.com/akaihola/keke"
